removed extra cleanup of psupData.formation